--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.9.1",
+        "fly-apps/dockerfile-laravel": "^1.0",
         "laravel/dusk": "^8.0",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.0.1",
