--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "prod": "",
+    "production": ""
   },
   "devDependencies": {
     "axios": "^1.1.2",
